<resources>
    <string name="app_name">Cartelera</string>
    <string name="tab_text_1">Eventos</string>
    <string name="tab_text_2">Favoritos</string>
    <string name="tab_text_3">Busqueda</string>
    <string name="tab_text_4">Mapa</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_events_on_db">No hay eventos próximos.</string>
    <string name="removed_favorite">Se quitó de favoritos.</string>
    <string name="added_favorite">Se agregó a favoritos.</string>
    <string name="search_view">Enter search</string>
    <string name="search_hint">Buscar en eventos</string>
    <string name="filter_category">Categoría</string>
    <string name="filters_apply">Aplicar Filtros</string>
    <string name="filter_date">Fecha</string>
    <string name="filters_title">Filtros</string>
    <string name="filter_view">Filtrar Resultados</string>
    <string name="filters_remove">Eliminar Filtros</string>
    <string name="no_connection">No hay conexión a internet</string>
    <string name="showing_filtered_events">Se muestran eventos filtrados</string>
    <string name="share_via">Compartir vía</string>
</resources>
